# mcp-theanswer

./: .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  IMPLEMENTATION.md  README.md  pyproject.toml
scripts/: test_client.py
src/mcp_theanswer/: __init__.py  config.py  main.py  seed_data.py  server.py
src/mcp_theanswer/database/: __init__.py  models.py  operations.py  schema.py
src/mcp_theanswer/mcp/: prompts.py  resources.py  tools.py
tests/: test_database.py  test_main.py  test_models.py  test_prompts.py  test_resources.py  test_schema.py  test_seed_data.py  test_server.py  test_tools.py
tests/fixtures/: test_quotes.py
